--- a/assets/index.html
+++ b/assets/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <!-- header -->
-    <header>
-        <img src="./images/logo.png" alt="logo da empresa XPTO">
-        <!-- Menu do Site -->
+    <header class="container">
        
+        <!-- Menu do Site -->   
+       <section class="row">
+         <img src="./images/logo.png" alt="logo da empresa XPTO">
         <nav>
             <ul>
                 <li><a href="#">Home</a> </li>
@@ -22,14 +23,15 @@
                 <li><a href="#" class="btn btn-laranja">Currículo</a> </li>
             </ul>
         </nav>
+       </section>
      <!-- End Menu do Site -->
     </header>
     <!-- End header -->
 
      <!-- container -->
-    <main>
+    <main class="container">
         <!-- Section conteúdo do site -->
-        <section>
+        <section class="row">
              <!-- conteúdo do texto sobre o site -->
             <article>
                 <h1>Web Designer</h1>
